@@ -8,6 +8,8 @@ Version 0.12 (TBA)
  * Improved developer first experience (Dr Nic Williams)
  * Improved after install instruction language (Jeff Casimir)
  * Added forward char, backward char, and delete char commands (Dan Lucraft)
+ * Fixed irritating bugs in the indenter (Dan Lucraft)
+ * Pressing enter when between {} will expand the block (Dan Lucraft)
 
 Version 0.11 (23 March 2011)
 ============================
